ENG-275: Fixed padding, alignment and change detection for the PricingDetails Paymarket column

--- a/apps/jobs/app/_jobs-page/grid-column-templates/pricing-matches-job-title/pricing-matches-job-title.component.scss
+++ b/apps/jobs/app/_jobs-page/grid-column-templates/pricing-matches-job-title/pricing-matches-job-title.component.scss
@@ -7,5 +7,12 @@ div.collapsed {
 }
 
 .wtg-adj-cell {
+  min-width: 50px;
   width: 50px;
 }
+
+.date-cmp {
+  text-align: right;
+  min-width: 80px;
+}
+
